# ChangeLog for sys-apps/ack
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ack/ChangeLog,v 1.13 2009/11/20 15:22:22 maekke Exp $

  20 Nov 2009; Markus Meier <maekke@gentoo.org> ack-1.90.ebuild:
  x86 stable, bug #288704

  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> ack-1.90.ebuild:
  amd64 stable wrt #288704

*ack-1.90 (08 Sep 2009)

  08 Sep 2009; Patrick Lauer <patrick@gentoo.org> +ack-1.90.ebuild:
  Bump to 1.90, fixes #284183

  26 Jul 2009; Tiago Cunha <tcunha@gentoo.org> ack-1.88-r1.ebuild:
  stable amd64, bug 277477

  26 Jul 2009; Rajiv Aaron Manglani <rajiv@gentoo.org> -ack-1.86.ebuild,
  ack-1.88.ebuild, ack-1.88-r1.ebuild:
  fix RDEPEND. cleanup.

  15 Jul 2009; Christian Faulhammer <fauli@gentoo.org> ack-1.88-r1.ebuild:
  stable x86, bug 277477

  15 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> ack-1.88.ebuild:
  stable amd64, bug 262261

*ack-1.88-r1 (12 Mar 2009)

  12 Mar 2009; Rajiv Aaron Manglani <rajiv@gentoo.org> +ack-1.88-r1.ebuild:
  new ebuild which enables src test.

  12 Mar 2009; Torsten Veller <tove@gentoo.org> ack-1.88.ebuild:
  Stable on x86 (#262261)

*ack-1.88 (08 Feb 2009)

  08 Feb 2009; Rajiv Aaron Manglani <rajiv@gentoo.org> +ack-1.88.ebuild:
  version bump.

  06 Sep 2008; Raúl Porcel <armin76@gentoo.org> ack-1.86.ebuild:
  x86 stable wrt #236796

  05 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> ack-1.86.ebuild:
  amd64 stable wrt bug #236796

*ack-1.86 (01 Aug 2008)

  01 Aug 2008; Rajiv Aaron Manglani <rajiv@gentoo.org>:
  new package, ack. from http://petdance.com/ack/ and bug #220645.
  ebuild submitted by René 'Necoro' Neumann <gentoo@necoro.eu>.